appId: com.hiroapp.exposdktoy
---
- launchApp

- tapOn: Go To Sign-In

- tapOn: Go To Home Screen

- tapOn:
    point: 91%,9%

- tapOn:
    point: 93%,9%

- tapOn: Close drawer

- tapOn: keyboard-provider, tab, 2 of 7

- tapOn: skia, tab, 3 of 7

- tapOn: gesture, tab, 4 of 7

- tapOn: sensor, tab, 5 of 7

- tapOn: svg-image, tab, 6 of 7

- tapOn: map, tab, 7 of 7

- tapOn: (drawer), tab, 1 of 7
